--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,8 @@
 								<div class="bottom-bar">
 									<div class="bottom-content">
 										<div id="textGuess" class="text-guess blink">***</div>
-										<div class="text-caption">👇 More Games 👇</div>
-										<div class="text-caption" style="margin-bottom: 0rem;"><a href="https://www.gemtok.live">www.gemtok.live</a></div>
+										<div class="text-caption">Jangan Lupa Follow 👇</div>
+										<div class="text-caption" style="margin-bottom: 0rem;"><a href="https://www.gemtok.live">Tangkap Follower Affiliate</a></div>
 									</div>
 								</div>
 							</td>
