--- a/public/index.html
+++ b/public/index.html
@@ -1,119 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tiktok Printer</title>
-    <meta name="description" content="Tiktok Printer Guess Words Game">
-    <meta name="author" content="adierebel">
-    <link rel="stylesheet" href="assets/css/reset.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/style.css?v=1.0">
-    <script type="text/javascript" src="words.js"></script>
-    <script type="text/javascript" src="msg.js"></script>
-    <script type="text/javascript" src="assets/tts/speakClient.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.js"></script>
-    <script type="text/javascript" src="assets/js/socket.io.js"></script>
-    <script type="text/javascript" src="assets/js/connection.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
-    <style>
-      .main {
-        display: flex;
-        flex-direction: column; /* printer di atas, menu di bawah */
-        height: 100vh;
-      }
-      .container {
-        flex: 1;
-        position: sticky;
-        top: 0; /* biar printer tetap kelihatan */
-      }
-      .info.scrollable {
-        max-height: 220px;   /* atur sesuai kebutuhan */
-        overflow-y: auto;    /* scroll kalau konten panjang */
-        background: #f0f0f0;
-        padding: 10px;
-        border-top: 2px solid #ccc;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="main">
-      <div class="container">
-        <video class="background" autoplay muted loop>
-          <source src="assets/media/background.mp4" type="video/mp4">
-        </video>
-        <div class="printer">
-          <table class="table">
-            <tr>
-              <td id="paperContainer">
-                <div id="paper" class="paper"></div>
-              </td>
-            </tr>
-            <tr class="bottom-container">
-              <td class="bottom-wrapper">
-                <div class="bottom-bar">
-                  <div class="bottom-content">
-                    <div id="textGuess" class="text-guess blink">***</div>
-                    <div class="text-caption">Jangan Lupa Follow 👇</div>
-                    <div class="text-caption" style="margin-bottom: 0rem;">
-                      <a href="https://www.gemtok.live">Tangkap Follower Affiliate</a>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </table>
-        </div>
-        <!-- <div class="animation"></div> -->
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TikTok Virtual Printer</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #d3d3d3;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-y: auto; /* biar bisa scroll */
+      min-height: 100vh;
+    }
 
-      <!-- INFO MENU DIPINDAH KE BAWAH -->
-      <div class="info scrollable">
-        <div class="mb-3">
-          <a href="/">MENU</a>
-        </div>
-        <table class="mb-3">
-          <tr><td>Canvas</td><td>&nbsp;:&nbsp;</td><td id="gameSize">&infin;</td></tr>
-          <tr><td>Chat Status</td><td>&nbsp;:&nbsp;</td><td id="stateText">Not Connected</td></tr>
-          <tr><td>Game Timeout</td><td>&nbsp;:&nbsp;</td><td id="gameTimeout">&infin;</td></tr>
-          <tr><td>Remain Words</td><td>&nbsp;:&nbsp;</td><td id="gameWords">&infin;</td></tr>
-        </table>
-        <div class="mb-3">
-          <button id="btnPrepare">START GAME</button>
-        </div>
-        <div class="text-bold">Printing Settings:</div>
-        <table class="mt-2 mb-3">
-          <tr><td><input id="confComment" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Comment</td></tr>
-          <tr><td><input id="confLike" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Like</td></tr>
-          <tr><td><input id="confShare" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Share &amp; Follow</td></tr>
-          <tr><td><input id="confJoin" type="checkbox"/>&nbsp;&nbsp;</td><td>User Joined</td></tr>
-          <tr><td colspan="2"><button id="btnSave" class="mt-2">SAVE</button></td></tr>
-        </table>
-        <div class="text-bold">Live Chat</div>
-        <div class="mb-3 mt-2">
-          <input id="targetUsername" type="text" placeholder="Enter @username" style="width:140px;"/>
-          <button id="targetConnect">Connect</button>
-        </div>
-        <div>
-          If you want the latest version and future update.
-          <br />
-          You can check <a href="https://play.gemtok.live/"><b style="font-weight:bold;">https://play.gemtok.live/</b></a>
-        </div>
-        <div>
-          <audio id="sfx1" class="d-block">
-            <source src="assets/sounds/printer_comment.mp3" type="audio/mpeg">
-          </audio>
-          <audio id="sfx2" class="d-block">
-            <source src="assets/sounds/printer_gift.mp3" type="audio/mpeg">
-          </audio>
-          <audio id="sfx3" class="d-block">
-            <source src="assets/sounds/printer_winner.mp3" type="audio/mpeg">
-          </audio>
-          <audio id="sfx4" class="d-block">
-            <source src="assets/sounds/yey.mp3" type="audio/mpeg">
-          </audio>
-          <audio id="tts" class="d-block"></audio>
-        </div>
-      </div>
+    .printer-wrapper {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .printer {
+      background-image: url('media/printer.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      height: 500px;
+      width: 360px;
+      position: relative;
+    }
+
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .info {
+      width: 100%;
+      max-width: 600px;
+      background: #fff;
+      padding: 20px;
+      margin-top: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      position: relative; /* ikut flow normal */
+    }
+  </style>
+</head>
+<body>
+  <!-- Printer dan Kertas -->
+  <div class="printer-wrapper">
+    <div class="printer">
+      <canvas id="printerCanvas" width="360" height="695"></canvas>
     </div>
-  </body>
+  </div>
+
+  <!-- Panel Kontrol -->
+  <div class="info">
+    <h3>MENU</h3>
+    <p>Canvas: 360x695</p>
+    <p>Chat Status: <span id="chatStatus">Not Connected</span></p>
+    <button id="startGame">START GAME</button>
+    <p>Printing Settings:</p>
+    <label><input type="checkbox" checked id="printComment"> Comment</label><br>
+    <label><input type="checkbox" checked id="printLike"> Like</label>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
