--- a/public/index.html
+++ b/public/index.html
@@ -1,95 +1,96 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Virtual Printer</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #ccc;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      overflow-y: auto; /* biar bisa scroll */
-      font-family: Arial, sans-serif;
-    }
-
-    /* Wrapper printer */
-    .printer-wrapper {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-
-    /* Printer */
-    .printer {
-      background-image: url('media/printer.png'); /* ganti path sesuai file kamu */
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-      height: 500px;  /* tinggi printer */
-      width: 360px;   /* lebar printer */
-      position: relative;
-    }
-
-    /* Kertas / canvas */
-    .printer canvas {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    /* Menu info */
-    .info {
-      width: 100%;
-      max-width: 600px;
-      background: #fff;
-      padding: 20px;
-      margin: 40px auto;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      border-radius: 8px;
-      text-align: center;
-    }
-
-    .info h3 {
-      margin-top: 0;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      background: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #0056b3;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Bagian printer -->
-  <div class="printer-wrapper">
-    <div class="printer">
-      <canvas id="printer-canvas" width="360" height="695"></canvas>
-    </div>
-  </div>
-
-  <!-- Bagian menu/info -->
-  <div class="info">
-    <h3>MENU</h3>
-    <p>Canvas: 360x695</p>
-    <p>Chat Status: Not Connected</p>
-    <button>Test Print</button>
-  </div>
-
-</body>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Tiktok Printer</title>
+		<meta name="description" content="Tiktok Printer Guess Words Game">
+		<meta name="author" content="adierebel">
+		<link rel="stylesheet" href="assets/css/reset.css?v=1.0">
+		<link rel="stylesheet" href="assets/css/style.css?v=1.0">
+		<script type="text/javascript" src="words.js"></script>
+		<script type="text/javascript" src="msg.js"></script>
+		<script type="text/javascript" src="assets/tts/speakClient.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.js"></script>
+		<script type="text/javascript" src="assets/js/socket.io.js"></script>
+		<script type="text/javascript" src="assets/js/connection.js"></script>
+		<script type="text/javascript" src="assets/js/app.js"></script>
+	</head>
+	<body>
+		<div class="main">
+			<div class="info">
+				<div class="mb-3">
+					<a href="/">MENU</a>
+				</div>
+				<table class="mb-3">
+					<tr><td>Canvas</td><td>&nbsp;:&nbsp;</td><td id="gameSize">&infin;</td></tr>
+					<tr><td>Chat Status</td><td>&nbsp;:&nbsp;</td><td id="stateText">Not Connected</td></tr>
+					<tr><td>Game Timeout</td><td>&nbsp;:&nbsp;</td><td id="gameTimeout">&infin;</td></tr>
+					<tr><td>Remain Words</td><td>&nbsp;:&nbsp;</td><td id="gameWords">&infin;</td></tr>
+				</table>
+				<div class="mb-3">
+					<button id="btnPrepare">START GAME</button>
+				</div>
+				<div class="text-bold">Printing Settings:</div>
+				<table class="mt-2 mb-3">
+					<tr><td><input id="confComment" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Comment</td></tr>
+					<tr><td><input id="confLike" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Like</td></tr>
+					<tr><td><input id="confShare" type="checkbox" checked="true"/>&nbsp;&nbsp;</td><td>Share &amp; Follow</td></tr>
+					<tr><td><input id="confJoin" type="checkbox"/>&nbsp;&nbsp;</td><td>User Joined</td></tr>
+					<tr><td colspan="2"><button id="btnSave" class="mt-2">SAVE</button></td></tr>
+				</table>
+				<div class="text-bold">Live Chat</div>
+				<div class="mb-3 mt-2">
+					<input id="targetUsername" type="text" placeholder="Enter @username" style="width:140px;"/>
+					<button id="targetConnect">Connect</button>
+				</div>
+				<div>
+					If you want the latest version and future update.
+					<br />
+					You can check <a href="https://play.gemtok.live/"><b style="font-weight:bold;">https://play.gemtok.live/</b></a>
+				</div>
+				<div>
+					<audio id="sfx1" class="d-block">
+						<source src="assets/sounds/printer_comment.mp3" type="audio/mpeg">
+					</audio>
+					<audio id="sfx2" class="d-block">
+						<source src="assets/sounds/printer_gift.mp3" type="audio/mpeg">
+					</audio>
+					<audio id="sfx3" class="d-block">
+						<source src="assets/sounds/printer_winner.mp3" type="audio/mpeg">
+					</audio>
+					<audio id="sfx4" class="d-block">
+						<source src="assets/sounds/yey.mp3" type="audio/mpeg">
+					</audio>
+					<audio id="tts" class="d-block"></audio>
+				</div>
+			</div>
+			<div class="container">
+				<video class="background" autoplay muted loop>
+					<source src="assets/media/background.mp4" type="video/mp4">
+				</video>
+				<div class="printer">
+					<table class="table">
+						<tr>
+							<td id="paperContainer">
+								<div id="paper" class="paper"></div>
+							</td>
+						</tr>
+						<tr class="bottom-container">
+							<td class="bottom-wrapper">
+								<div class="bottom-bar">
+									<div class="bottom-content">
+										<div id="textGuess" class="text-guess blink">***</div>
+										<div class="text-caption">Saling Follow 👇</div>
+										<div class="text-caption" style="margin-bottom: 0rem;"><a href="https://www.gemtok.live">Tangkap follower affiliate</a></div>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+				</div>
+				<!-- <div class="animation"></div> -->
+			</div>
+		</div>
+	</body>
 </html>
