--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="info">
+			<div class="info menu">
 				<div class="mb-3">
 					<a href="/">MENU</a>
 				</div>
