--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="info menu">
+			<div class="info">
 				<div class="mb-3">
 					<a href="/">MENU</a>
 				</div>
@@ -94,3 +94,4 @@
 		</div>
 	</body>
 </html>
+
