--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         <div>
           If you want the latest version and future update.
           <br />
-          You can check <a href="https://play.gemtok.live/"><b style="font-weight:bold;">https://play.gemtok.live/</b></a>
+          You can check <a href="https://play.gemtok.live/"><b style="font-weight:bold;">Tangkap follower affiliate</b></a>
         </div>
         <div>
           <audio id="sfx1" class="d-block">
